test/invalid/syntactic/double_semicolon.sysml
// INVALID: Double semicolon
// EXPECTED: Parse error
package Test {
    part x;;
}
